setting up h2 config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+#server port
+server.port=8089
 
+
+#local h2 database properties
+spring.datasource.url=jdbc:h2:file:./data/todoapp
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#local h2 database console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=false 
+
+#local h2 tables on start up
+spring.jpa.hibernate.ddl-auto=update
+
+spring.devtools.restart.enabled=true
